<resources>
    <string name="app_name">HomeInspection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Home Inspection</string>
    <string name="nav_header_subtitle">homeinspection@bcod.co.in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up_full_name_hint">Full Name</string>

    <!--Home-->
    <string name="add_property">Add Property</string>
    <string name="cancelled_image_capture_error">Cancel Image</string>


    <!--Font String Name Begins -->
    <string name="font_name_pluto_light">pluto_light</string>
    <string name="font_name_pluto_medium">pluto_medium</string>
    <string name="font_name_poppins_regular">poppins_regular</string>
    <string name="font_name_poppins_medium">poppins_medium</string>
    <string name="font_name_poppins_semibold">poppins_semibold</string>
    <string name="font_name_poppins_bold">poppins_bold</string>


    <string name="font_name_Roboto_Regular">Roboto_Regular</string>
    <string name="font_name_Roboto_Medium">Roboto_Medium</string>
    <string name="font_name_Robot_Bold">Robot_Bold</string>
    <!--Font String Name Ends -->


    <string name="no_property">No Property</string>
    <string name="property_name">Name of property</string>
    <string name="property_address">Address of property</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="saved">Property Saved</string>
    <string name="property_update">Property updated</string>
    <string name="not_saved">Couldn\'t Save</string>
    <string name="enter_property_name">Enter property name</string>
    <string name="enter_property_address">Enter property address</string>


    <!--Inside home-->
    <string name="welcometo">Welcome to</string>
    <string name="quotation">Quotation</string>
    <string name="inspection">Inspection</string>
    <string name="actual">Actual</string>

    <string name="quotationof">Make Quotation of</string>
    <string name="publish">Publish</string>
    <string name="mail">Send Mail</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="add_item">Add Item</string>
    <string name="add_room">Add Room</string>

    <!--Item-->
    <string name="item_name">Item Name</string>
    <string name="item_cost">Item Cost</string>
    <string name="item_note">Note</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="enter_item_cost">Enter item cost</string>
    <string name="enter_numeric_value">Enter numeric value</string>


    <!--Room-->
    <string name="room_name">Room Name</string>
    <string name="room_description">Description</string>
    <string name="no_room">No Room</string>
    <string name="enter_room_name">Enter room name</string>
    <string name="enter_room_desc">Enter room description</string>


    <string name="living_room">Living Room</string>
    <string name="bed_room">Bed Room</string>
    <string name="Powder_room">Powder Room</string>
    <string name="kitchen">Kitchen</string>
    <string name="study_room">Study Room</string>
    <string name="store_room">Store Room</string>
    <string name="Other_room">Other Room</string>
    <string name="title_activity_actual">ActualActivity</string>
    <string name="title_activity_inspection">InspectionActivity</string>


</resources>
