<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/insidehomeee"
    tools:ignore="InvalidId">

    <TextView
        android:id="@+id/tv_Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcometo"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/add_property_textsize"
        app:layout_constraintEnd_toStartOf="@+id/tv_Quotation"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Quotation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="TextView"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/add_property_textsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_Welcome"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_PropertyAddress"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="TextView"
        android:textSize="@dimen/add_property_adresstextsize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Welcome" />


    <Button
        android:id="@+id/btnQuotation"
        android:layout_width="@dimen/quotation_width"
        android:layout_height="@dimen/add_property_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/add_site"
        android:drawableStart="@drawable/penc"
        android:paddingLeft="12dp"
        android:text="@string/quotation"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/add_property_textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_PropertyAddress" />

    <Button
        android:id="@+id/btn_Inspection"
        android:layout_width="@dimen/quotation_width"
        android:layout_height="39dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/add_site"
        android:drawableStart="@drawable/searchh"
        android:paddingLeft="10dp"
        android:text="@string/inspection"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/add_property_textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuotation" />

    <Button
        android:id="@+id/btn_actual"
        android:layout_width="@dimen/quotation_width"
        android:layout_height="@dimen/add_property_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/add_site"
        android:drawableStart="@drawable/q"
        android:paddingLeft="10dp"
        android:text="@string/actual"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/add_property_textsize"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Inspection" />


</android.support.constraint.ConstraintLayout>
